Update the documentation [student, mentor, courses, topStats]
